welcome.lessons.welcome.conditions.Conditions.scala.error
Program:1: error: '(' expected but identifier found.
if estFaceMur()==false {
   ^Program:10: error: illegal start of simple expression
	}
        ^