welcome.lessons.welcome.conditions.Conditions.scala.code
if estFaceMur()==false {
  avance()
  
}else {
  recule()
  avance()
}
  